--- a/Atividade STS/BlogPessoal/src/main/resources/application.properties
+++ b/Atividade STS/BlogPessoal/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-#conectar com banco
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/BlogPessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-server.port=8085
 
-
-
-#application properties serve patra conectar com o servidor 
 
